--- a/pom.xml
+++ b/pom.xml
@@ -31,5 +31,10 @@
 			<artifactId>lwjgl_util</artifactId>
 			<version>2.8.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.lwjgl.lwjgl</groupId>
+			<artifactId>lwjgl_util</artifactId>
+			<version>2.8.3</version>
+		</dependency>
 	</dependencies>
 </project>
