Fixed native library mess. Now they are loaded from the jar.

--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,27 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>PenguinMenaceEngine</groupId>
 	<artifactId>PenguinMenaceEngine</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>PenguinMenaceEngine</name>
 	<description>A 3d space shooter engine.</description>
 	<build>
 		<plugins>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>attached</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
