--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>PenguinMenaceEngine</groupId>
+	<groupId>com.github.penguinmenaceengine</groupId>
 	<artifactId>PenguinMenaceEngine</artifactId>
 	<version>1.0</version>
 	<name>PenguinMenaceEngine</name>
 	<description>A 3d space shooter engine.</description>
+
+    <properties>
+        <!--maven variable which points to your local repository -->
+        <internal.repo.path>file:///home/michael/git/PenguinMenaceEngine/mvn-repo/</internal.repo.path>
+    </properties>
+
+    <distributionManagement>
+        <repository>
+            <id>internal.repo</id>
+            <name>Internal Repository</name>
+            <url>${internal.repo.path}</url>
+        </repository>
+    </distributionManagement>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -36,6 +50,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
+                <version>2.2.1</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
@@ -52,11 +67,6 @@
 		<dependency>
 			<groupId>org.lwjgl.lwjgl</groupId>
 			<artifactId>lwjgl</artifactId>
-			<version>2.8.3</version>
-		</dependency>
-		<dependency>
-			<groupId>org.lwjgl.lwjgl</groupId>
-			<artifactId>lwjgl_util</artifactId>
 			<version>2.8.3</version>
 		</dependency>
 		<dependency>
