--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <properties>
         <!--maven variable which points to your local repository -->
-        <internal.repo.path>file:///Users/michael.fuerst/workspace/penguinmenaceengine/mvn-repo/</internal.repo.path>
+        <internal.repo.path>file:///home/michael/androspace/PenguinMenaceEngine/mvn-repo/</internal.repo.path>
     </properties>
 
     <distributionManagement>
