--- a/pom.xml
+++ b/pom.xml
@@ -90,4 +90,16 @@
             <version>2.8.3</version>
         </dependency>
     </dependencies>
+    <url>https://github.com/PenguinMenaceTechnologies/PenguinMenaceEngine</url>
+    <organization>
+    	<name>PenguinMenaceTechnologies</name>
+    	<url>https://github.com/PenguinMenaceTechnologies</url>
+    </organization>
+    <scm>
+    	<url>https://github.com/PenguinMenaceTechnologies/PenguinMenaceEngine.git</url>
+    </scm>
+    <issueManagement>
+    	<url>https://github.com/PenguinMenaceTechnologies/PenguinMenaceEngine/issues</url>
+    	<system>Github</system>
+    </issueManagement>
 </project>
