--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,12 @@
             <artifactId>lwjgl_util</artifactId>
             <version>2.8.3</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <url>https://github.com/PenguinMenaceTechnologies/PenguinMenaceEngine</url>
     <organization>
